# opencode-server-client

./: .gitignore  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml  ruff.toml  setup.cfg
docs/superpowers/plans/: 2026-06-02-opencode-server-client.md
docs/superpowers/specs/: 2026-06-02-opencode-server-client-design.md
opencode_server_client/: __init__.py  _decode.py  _transport.py  client.py  version.py
opencode_server_client/models/: _catalog_responses.py  _convert.py  _model.py  base.py  catalog.py  common.py  config.py  event.py  file.py  find.py  health.py  message.py  message_input.py  project.py  provider.py  session.py  session_extra.py  session_input.py  vcs.py
opencode_server_client/resources/: __init__.py  _base.py  _catalog_list.py  _catalog_misc.py  _catalog_skill_lsp.py  config.py  event.py  file.py  find.py  message.py  project.py  provider.py  server.py  session.py  vcs.py
opencode_server_client/resources/_async/: __init__.py
tests/: test_decode.py  test_public_api.py  test_transport.py  test_version.py
tests/models/: test_base.py  test_session.py
tests/resources/: conftest.py  test_catalog.py  test_config.py  test_event.py  test_file.py  test_find.py  test_message.py  test_project.py  test_provider.py  test_server.py  test_session.py  test_vcs.py
