[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "opencode-server-client"
version = "0.0.1"
description = ""  # TODO
authors = [
    "Timur Valiev <cptchunk@yandex.ru>"
]
license = "MIT"
readme = "README.md"

classifiers = [
  # "Development Status :: 5 - Production/Stable",  TODO
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

homepage = "https://github.com/imtoopunkforyou/opencode-server-client"

keywords = [
  "opencode",  # TODO
]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.28.1"
typing-extensions = "^4.0"


[tool.poetry.group.lint.dependencies]
wemake-python-styleguide = "^1.6.2"
mypy = "^2.1.0"
ruff = "^0.15.15"
codespell = "^2.4.2"
pymarkdownlnt = "==0.9.35"
flake8-digit-separator = "^1.0.7"
deptry = "^0.25.1"


[tool.poetry.group.tests.dependencies]
pytest = "^9.0.3"
faker = "^40.20.0"
pytest-cov = "^7.1.0"
pytest-sugar = "^1.1.1"
pytest-asyncio = ">=0.26"
